--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
 
   "minimum-stability": "dev",
   "require": {
-    "php": ">=7.1",
-     "sc0vu/web3.php": "0.1.4",
+    "php": ">=7.3",
+    "sc0vu/web3.php": "0.1.4",
     "web3p/ethereum-util": "0.1.2",
-    "kornrunner/ethereum-offline-raw-tx": "0.2.4"
+    "kornrunner/ethereum-offline-raw-tx": "0.2.4",
+    "kornrunner/keccak": "^1.0",
   }
 }
 
