--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "sc0vu/web3.php": "0.1.4",
     "web3p/ethereum-util": "0.1.2",
     "kornrunner/ethereum-offline-raw-tx": "0.2.4",
-    "kornrunner/keccak": "^1.0",
+    "kornrunner/keccak": "^dev-master",
   }
 }
 
