--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     }
   },
 
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require": {
     "php": ">=7.3",
     "sc0vu/web3.php": "0.1.4",
     "web3p/ethereum-util": "0.1.2",
     "kornrunner/ethereum-offline-raw-tx": "0.2.4",
-    "kornrunner/keccak": "^dev-master",
+    "kornrunner/keccak": "^1.0",
   }
 }
 
