--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "This library provides simple way to interact with Ethereum ERC20 token",
   "type": "library",
   "license": "MIT",
-   "version": "1.0.0",
+   "version": "dev",
   "authors": [
     {
       "name": "placecodex",
@@ -16,13 +16,13 @@
     }
   },
 
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
     "php": ">=7.3",
     "sc0vu/web3.php": "0.1.4",
     "web3p/ethereum-util": "0.1.2",
     "kornrunner/ethereum-offline-raw-tx": "0.2.4",
-    "kornrunner/keccak": "^1.0",
+    "kornrunner/keccak": "*",
   }
 }
 
