--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=7.1",
-    "sc0vu/web3.php": "dev-master",
+    "sc0vu/web3.php": "0.1.4",
     "web3p/ethereum-util": "0.1.3",
     "web3p/ethereum-tx": "dev-master"
   }
