--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
   "require": {
     "php": ">=7.1",
     "sc0vu/web3.php": "0.1.4",
-    "web3p/ethereum-util": "0.1.3",
-    "web3p/ethereum-tx": "dev-master"
+    "web3p/ethereum-util": "0.1.3"
+  
   }
 }
 
